Mostly UI fixes on Mobile

--- a/src/styles/blog.module.sass
+++ b/src/styles/blog.module.sass
@@ -15,6 +15,8 @@ h1
         height: 500px
     .postWrapper
         margin: 3em
+        @media (max-width: 400px)
+            margin: 3em 0.5em
     a, a:active, a:visited
         text-decoration: underline
         color: currentColor
