--- a/src/styles/blogHeader.module.sass
+++ b/src/styles/blogHeader.module.sass
@@ -11,7 +11,7 @@
   text-align: right
   color: #fefefe
   display: flex
-  max-height: 300px
+  max-height: 30vh
   background: #282c34 url('../images/bg.svg') no-repeat center fixed
   background-size: cover
   padding: 5em 0.75em 0.75em
@@ -25,26 +25,30 @@
 .subTitle
   width: 75%
   line-height: 1.25em
-  margin-bottom: 0.75em
+  margin: 0
 .mainTitle
-  font-family: 'Open Sans'
+  margin: 0.25em 0
   font-weight: 600
   font-size: calc(25px + 2vmin)
+  text-transform: uppercase
   display: flex
-  justify-content: flex-end
+  justify-content: center
   align-items: center
-  margin-bottom: 0.5em
   svg
     margin-right: 0.33em
     color: greenyellow
     opacity: 0.5
 .btnContactMe
+  margin-top: 0.3em
+  font-size: 1.5em
   background: transparent
   color: #fefefe
   font-weight: 600
   border: none
   outline: solid 0.1em #fefefe
   transition: all ease-in 1s
+  padding: 0.5em 0.75em
+  white-space: nowrap
   &:hover
     color: black
     transition: all ease-in 0.1s
