--- a/src/styles/education.module.sass
+++ b/src/styles/education.module.sass
@@ -10,17 +10,18 @@
     flex-direction: column
     justify-content: center
     align-content: center
-    padding: 4em
+    padding: 6em 4em
     @media (max-width: 400px)
-        font-size: 1em
-        padding: 4em 0.25em
+        padding: 6em 0.5em
     .headerWrapper
         display: flex
         align-items: center
         justify-content: space-between
         width: 100%
         padding: 2em 2em
-        margin-bottom: 2em
+        margin-bottom: 4em
+        @media (max-width: 400px)
+            padding: 2em 0.5em
         h2
             font-family: 'Open Sans'
             margin: 0
@@ -63,7 +64,7 @@
         @media (max-width: 400px)
             font-size: 0.85em
             max-width: 100%
-            padding: 2.5em 0.5em
+            padding: 2.5em 0.75em
         .dates
             span
                 display: inline
