--- a/src/styles/experience.module.sass
+++ b/src/styles/experience.module.sass
@@ -6,18 +6,20 @@
     min-height: 100vh
     width: 100%
     margin: 0
-    padding: 4em
+    padding: 6em 4em
     align-items: center
     justify-content: center
     text-align: center
     @media (max-width: 400px)
-        padding: 0.25em
+        padding: 6em 0.5em
     .headerWrapper
         display: flex
         align-items: center
         justify-content: space-between
         width: 100%
         padding: 2em 2em
+        @media (max-width: 400px)
+            padding: 2em 0.5em
         h2
             margin: 0
             font-family: 'Open Sans'
@@ -31,7 +33,7 @@
             font-size: 2.5em
             display: inline-block
             @media (max-width: 400px)
-                font-size: 1.75em
+                font-size: 2em
     .work
         max-width: 900px
         margin: 2.5em auto
@@ -39,7 +41,7 @@
         outline: solid 0.1px darkgray
         box-shadow: 3px 3px 3px hsla(5,5,5,0.3)
         @media (max-width: 400px)
-            padding: 2em 0.75em
+            padding: 2em 1em
             font-size: 0.75em
         span:first-child
             display: inline
