--- a/src/styles/header.module.sass
+++ b/src/styles/header.module.sass
@@ -47,6 +47,7 @@
   outline: solid 0.1em #fefefe
   transition: all ease-in 1s
   padding: 0.5em 0.75em
+  white-space: nowrap
   &:hover
     color: black
     transition: all ease-in 0.1s
