--- a/src/styles/skills.module.sass
+++ b/src/styles/skills.module.sass
@@ -17,6 +17,8 @@
         width: 100%
         padding: 2em 2em
         margin-bottom: 2em
+        @media (max-width: 400px)
+            padding: 2em 0.5em
         h2
             font-family: 'Open Sans'
             margin: 0
